<resources>
    <string name="app_name">MathRocks</string>
    <string name="addition_problems_type_1">Addition Problems Type 1</string>
    <string name="subtraction_problems_type_1">Subtraction Problems Type 1</string>
    <string name="multiplication_problems_type_1">Multiplication Problems Type 1</string>
    <string name="division_problems_type_1">Division Problems Type 1</string>


    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="oper">+</string>
    <string name="result"></string>
    <string name="check_answer">Check Answer</string>
    <string name="next_question"></string>
    <string name="enter_your_answer">Enter answer</string>
    <string name="tvcorrectanswer">3</string>
    <string name="tvcorrectanswertext">The correct answer is </string>
    <string name="get_hint">Get Hint</string>
    <string name="tvlabeladd">Addition</string>
    <string name="tvlabelsub">Subtraction</string>
    <string name="tvlabelmul">Multiplication</string>
    <string name="tvlabeldiv">Division</string>
    <string name="tvnumcorrect">0</string>
    <string name="tvtext1">CORRECT OUT OF</string>
    <string name="tvtotalpossible">2</string>
    <string name="menu_home">Home</string>
    <string name="menu_score_summary">Score Summary</string>
    <string name="menu_about">About</string>
    <string name="tvlabellevel">Please select a level</string>
    <string name="delete_scores">Delete score</string>
    <string name="score_test">Score Test</string>
    <string name="test_level_label">Test Level</string>
    <string name="test_type_label">Test Type</string>
    <string name="total_number_of_questions_label">Total Number of Questions</string>
    <string name="total_number_of_correct_questions_label">Total Number of Correct Questions</string>
    <string name="total_number_of_incorrect_questions_label">Total Number of Incorrect Questions</string>
    <string name="test_score_label">Test Score</string>
    <string name="test_date_label">Test Date</string>
    <string name="view_questions">View Questions</string>
    <string name="question_number">Question</string>
    <string name="question">Question #</string>

    <string name="question1">How many questions are there in a test?</string>
    <string name="question2">How do I get a hint for a question?</string>
    <string name="question3">What do the levels for the tests represent?</string>
    <string name="question4">How can I see the tests I have taken?</string>
    <string name="question5">How do I view the questions for the tests I have taken?</string>
    <string name="question6">Can I retake a test?</string>
    <string name="question7">How do I delete a test?</string>

    <string name="answer1">There are ten (10) questions in each test.</string>
    <string name="answer2">Tap on the Get Hint button in the bottom left corner to view the hints for each question.</string>
    <string name="answer3">The levels represent the difficulty of each test.  " +
    "Level 1  questions are for the basic 0-12 addition/subtraction/multiplication/division.  " +
    "Level 2 covers 0 - 20. " +
    "Level 3 covers 0 - 100. " +
    "Level 4 allows for the numbers being computed to be different lengths. " +
    "The first number covers the range 0-1000 and the second number covers the range 0 - 100." +
        "Level 5 covers 0 - 1000 "</string>
    <string name="answer4">You can view the tests that you have taken by tapping on the menu bar and selecting Score Summary</string>
    <string name="answer5">To view the questions for a taken test, tap on the Chart icon next to the test on the Test Summary screen.</string>
    <string name="answer6">You can not retake tests at this time.</string>
    <string name="answer7">A test can be deleted by taping on the Trash can icon next to the test on the Test Summary screen.</string>


</resources>
