<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TestSummaryActivity"
    android:background="@color/colorAccent2">


<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">-->


        <TextView
            android:id="@+id/rv_testId"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/rv_label_testDate"
            android:text="@string/test_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rv_testDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/rv_label_testDate"
            app:layout_constraintStart_toEndOf="@+id/rv_label_testDate"/>


        <TextView
            android:id="@+id/rv_label_testLevel"
            android:text="@string/test_level_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/rv_label_testDate"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rv_testLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/rv_label_testLevel"
            app:layout_constraintStart_toEndOf="@+id/rv_label_testLevel"/>

        <TextView
            android:id="@+id/rv_label_testType"
            android:text="@string/test_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/rv_label_testLevel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rv_testType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/rv_label_testType"
            app:layout_constraintStart_toEndOf="@id/rv_label_testType"/>

        <TextView
            android:id="@+id/rv_label_numQuestions"
            android:text="@string/total_number_of_questions_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/rv_label_testType"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rv_numQuestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/rv_label_numQuestions"
            app:layout_constraintStart_toEndOf="@+id/rv_label_numQuestions"/>

        <TextView
            android:id="@+id/rv_label_numCorrect"
            android:text="@string/total_number_of_correct_questions_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/rv_label_numQuestions"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rv_numCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/rv_label_numCorrect"
            app:layout_constraintStart_toEndOf="@+id/rv_label_numCorrect"/>

        <TextView
            android:id="@+id/rv_label_numIncorrect"
            android:text="@string/total_number_of_incorrect_questions_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/rv_label_numCorrect"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rv_numIncorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/rv_label_numIncorrect"
            app:layout_constraintStart_toEndOf="@id/rv_label_numIncorrect"/>

        <TextView
            android:id="@+id/rv_label_testScore"
            android:text="@string/test_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/rv_label_numIncorrect"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rv_testScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/rv_label_testScore"
            app:layout_constraintStart_toEndOf="@id/rv_label_testScore"/>


    <!--</LinearLayout>-->


    <ImageButton
        android:id="@+id/rv_deleteImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/delete_scores"
        android:onClick="onClickDeleteItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_delete" />
</android.support.constraint.ConstraintLayout>